--- a/kokoa-clone/home.html
+++ b/kokoa-clone/home.html
@@ -2,6 +2,7 @@
 <html lang="kr">
     <head>
         <title>Home - My first website</title>
+        <link href="style.css" rel="stylesheet"/>
         <link rel="shortcut icon" href="https://developers.google.com/web/fundamentals/design-and-ux/responsive/img/html5.png?hl=ko"/>
         <meta charset="utf-8"/>
     </head>
