--- a/kokoa-clone/html/friends.html
+++ b/kokoa-clone/html/friends.html
@@ -27,22 +27,49 @@
 
     </div>
 
+    <header class="screen-header">
+        <h1 class="screen-header__title">Friends</h1>
+        <div class="screen-header__icons">
+            <span name="search"><i class="fas fa-lg fa-search"></i></span>
+            <span name="music"><i class="fas fa-lg fa-music"></i></span>
+            <span name="cog"><i class="fas fa-lg fa-cog"></i></span>
+        </div>
+    </header>
+
+    
+    <a id="friends-display-link">
+        <i class="fas fa-info-circle"></i>
+        <span>Friends' Names Display</span>
+        <i class="fas fa-xs fa-chevron-right"></i>
+    </a>
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
                 <a class="nav__link" href="friends.html">
-                    <i class="fas fa-user fa-2x"></i></a></li>
+                    <i class="fas fa-user fa-2x"></i>
+                </a>
+            </li>
             <li class="nav__btn">
                 <a class="nav__link"  href="#">
-                    <i class="far fa-comment fa-2x"></i></a></li>
+                    <i class="far fa-comment fa-2x"></i>
+                    <span class="nav__link__chatStatus">1</span>
+                </a>
+            </li>
             <li class="nav__btn">
                 <a class="nav__link"  href="#">
-                    <i class="fas fa-search fa-2x"></i></a></li>
+                    <i class="fas fa-search fa-2x"></i>
+                </a>
+            </li>
             <li class="nav__btn">
                 <a class="nav__link"  href="#">
-                    <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
+                    <i class="fas fa-ellipsis-h fa-2x"></i>
+                    <div class="nav__link__ellipseStatus"></div>
+                </a>
+            </li>
         </ul>
     </nav>
+
+
 
 </body>
 </html>
