--- a/kokoa-clone/html/index.html
+++ b/kokoa-clone/html/index.html
@@ -29,14 +29,14 @@
 
     </div>
     <header class="wellcome-header">
-        <h1 class="wellcome-header__title">Welcome to KakaoTalk</h1>
+        <h1 class="wellcome-header__title">Welcome to Kokoa Talk</h1>
         <span class="wellcome-header__text">If you have a Kakao Account</span>
         <span class="wellcome-header__text"> log in with your email or phone number.</span>
     </header>
 
     <form action="friends.html" method="get" id="login-form">
-        <input type="text" placeholder="Email or phone number" />
-        <input type="password" placeholder="Password" />
+        <input type="text" placeholder="Email or phone number" required/>
+        <input type="password" placeholder="Password" required/>
         <input type="submit" value="Log In" />
         <a href="#">Find Kakao Account or Password</a>
     </form>
